--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -110,7 +110,7 @@
   "i18n-ally.pathMatcher": "{locale}/{namespaces}.{ext}",
   "i18n-ally.enabledParsers": ["json","ts","js"],
   "i18n-ally.sourceLanguage": "en",
-  "i18n-ally.displayLanguage": "zh-CN",
+  "i18n-ally.displayLanguage": "zh-TW",
   "i18n-ally.enabledFrameworks": [
     "vue",
     "react"
