--- a/.github/workflows/wails.yml
+++ b/.github/workflows/wails.yml
@@ -20,7 +20,12 @@ jobs:
         ]
     runs-on: ${{ matrix.build.os }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+      - uses: pnpm/action-setup@v3
+        name: Install pnpm
+        with:
+          version: 8
 
       - uses: dAppServer/wails-build-action@v2.2
         with:
