--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -11,11 +11,11 @@ VITE_BUILD_COMPRESS = 'none'
 
 
 # Basic interface address SPA
-VITE_GLOB_API_URL=http://192.168.31.85:9000
+VITE_GLOB_API_URL=http://localhost:9000
 
 # File upload address， optional
 # It can be forwarded by nginx or write the actual address directly
-VITE_GLOB_UPLOAD_URL=http://192.168.31.85:9000/upload
+VITE_GLOB_UPLOAD_URL=http://localhost:9000/upload
 
 # Interface prefix
 VITE_GLOB_API_URL_PREFIX=/api
